Added a central rdash.less(scss) that imports other files

--- a/scss/rdash.scss
+++ b/scss/rdash.scss
@@ -1,8 +1,8 @@
-@import 'variables';
-@import 'mixins';
-@import 'main';
-@import 'content';
-@import 'hamburg';
-@import 'loading';
-@import 'sidebar';
-@import 'widgets';
+@import 'rdash/variables';
+@import 'rdash/mixins';
+@import 'rdash/main';
+@import 'rdash/content';
+@import 'rdash/hamburg';
+@import 'rdash/loading';
+@import 'rdash/sidebar';
+@import 'rdash/widgets';
